<resources>
    <string name="app_name">NurseLogin</string>
    <string name="title_activity_nurse_home">NurseHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Full Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="add_patient">Admit Patient</string>
    <string name="update_patient">Update Patient Details</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string-array name="status">
        <item>Select Status</item>
        <item>Admitted</item>
        <item>Discharged</item>
    </string-array>
</resources>
